--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,3 @@
-.navbar{margin-bottom:0;border-radius:0}footer{background-color:#f2f2f2;padding:25px}.jumbotron{background-image:url(../inspiration/37550928362_040bbaaac8_o.jpeg);background-color:none}
+.navbar{margin-bottom:0;border-radius:0}footer{background-color:#f2f2f2;padding:25px}.jumbotron{background-color:grey;display:flex;background-size:cover;height:100%}
 
 /*# sourceMappingURL=custom.css.map */
