Getting too focused on Carousel, not enough on design

--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -18,8 +18,8 @@
 
 
 
-$white: #ffffff;
-// $white: #f9ffff;
+// $white: #ffffff;
+$white: #f9ffff;
 
 $theme-colors: (
     "light":      #F9F9F9,
