fixed relative pathing, properly

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -12,7 +12,7 @@ $enable-negative-margins: true;
 }
 
 .carousel-item:nth-child(1) {
-    background-image: url('assets/img/pro_office.png');
+    background-image: url('../img/pro_office.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
