Removed bad links

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,6 +1,8 @@
 $white: #f9ffff;
 $enable-negative-margins: true;
 
+@media ()
+
 // @import "bootstrap/scss/bootstrap"; MDB is sufficient
 
 /* Carousel styling */
